Fixed navigation texture image
Image was too large and did not load to server, changed image and edited
image credits

--- a/css-final-project/common.css
+++ b/css-final-project/common.css
@@ -189,7 +189,7 @@ nav a:active{
 }
 
 #homepage #homelink, #reservationspage #reservationslink, #servicespage #serviceslink, #contactpage #contactlink, #eventspage #eventslink, #faqpage #faqlink{
-	background: url('Images/bgBlueTexture.jpg') 400px;
+	background-image: url('Images/bluebg2.jpg');
 }
 
 
